--- a/src/components/IconTile/icontile.scss
+++ b/src/components/IconTile/icontile.scss
@@ -29,6 +29,7 @@
     }
 
     .iconTile__download {
+      visibility: visible;
       opacity: 1;
       display: flex;
       margin-top: 0.25rem;
@@ -63,6 +64,7 @@
 
   &__download {
     display: flex;
+    visibility: hidden;
     width: 100%;
     justify-content: space-evenly;
 
